@@ -1,2 +1,0 @@
-QtKeychain is a Qt API to store passwords and other secret data
-securely. How the data is stored depends on the platform.
