@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:17:52 nia Exp $
-
-BLAKE2s (qtkeychain-0.4.0.tar.gz) = 4cb4fa5dcb3be41a662c444bb64e62ea42691eafc370b02673226726079cec4a
-SHA512 (qtkeychain-0.4.0.tar.gz) = 6dda0489193ed57d948e9426343972a186cde2c8503d0b72f64277ac202241ba710d61e30819e8f72f4bd500cfe2761179ec6be009d5e6f5fbe7bd1a3e65af8d
-Size (qtkeychain-0.4.0.tar.gz) = 18236 bytes
