@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2720 2024/04/26 15:15:53 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2721 2024/04/26 15:16:52 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4473,3 +4473,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed multimedia/phonon-backend-gstreamer [wiz 2024-04-26]
 	Removed multimedia/phonon-backend-vlc [wiz 2024-04-26]
 	Removed print/scribus-qt4 successor print/scribus-qt5 [wiz 2024-04-26]
+	Removed security/qt4-qtkeychain [wiz 2024-04-26]
